# MiniVec

./: .editorconfig  .gitattributes  .gitignore  README.md  build-benchmark.sh  build-debug.sh  build-tests.sh  build.ps1  build.sh  environment.yaml  minivec_cpp.pyi  pytest.ini
cpp/: CMakeLists.txt  hnsw_benchmark.csv
cpp/benchmarks/: bench_hnsw_search.cpp
cpp/include/: utils.hpp
cpp/include/minivec/: dist.hpp  hnsw.hpp  hnsw_node.hpp  layer_generator.hpp  pywrappers.hpp  search_stats.hpp  utils.hpp  vecstore.hpp
cpp/src/: bindings.cpp  dist.cpp  hnsw.cpp  hnsw_node.cpp  pywrappers.cpp  utils.cpp
cpp/tests/: test_custom_benchmark.cpp  test_hnsw.cpp  test_hnsw_accuracy.cpp  test_hnsw_latency.cpp  test_stats_tracking.cpp
minivec/: core.py
scripts/: test_bindings.py
tests/: test_minivec.py  test_minivec_accuracy.py
